# vibes

./: .gitignore  CMakeLists.txt  README.md
assets/: video_split.mov
lib/FFmpeg/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glad/: CMakeLists.txt
lib/glad/banana/: glad.c
lib/glad/banana/glad/: glad.h
lib/glad/darwin/: glad.c
lib/glad/darwin/glad/: glad.h
src/: frame_producer.cpp  frame_producer.hpp  main.cpp  network.cpp  network.h  shader.h  synchronization_handler.cpp  synchronization_handler.hpp  tic_tac_toe_vertices.h  video_reader.cpp  video_reader.hpp
src/shaders/: fragment_shader.fs  vertex_shader.vs  vertex_shader_es.vs
src/shaders/rgb/: fragment_shade_es.fs  fragment_shader.fs  vertex_shader.vs  vertex_shader_es.vs
src/shaders/texture/: fragment_shader.fs  fragment_shader_es.fs  vertex_shader.vs  vertex_shader_es.vs
